# compiler

./: Dockerfile.dev  README.md  test_program
.test-gadget/: auth_token  course.json  last_submission_id.txt  test-gadget-client-linux  test-gadget-client-macos
.test-gadget/test-gadget-client/: Cargo.toml  README.md
.test-gadget/test-gadget-client/src/: apply_rsync_diff.rs  client_state.rs  lib.rs  main.rs  requests.rs  submit.rs
src/compiler/: __main__.py  assembly_generator.py  ast.py  interpreter.py  ir.py  ir_generator.py  parser.py  tokenizer.py  type_checker.py  types.py
tests/: interpreter_test.py  ir_generator_test.py  parser_test.py  tokenizer_test.py  type_checker_test.py
