[package]
name = "test-gadget-client"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
atty = "0.2.14"
clap = { version = "4.5.9", default-features = false, features = ["std", "help", "usage", "derive"] }
env_logger = "0.11.3"
fast_rsync = "0.2.0"
hex = "0.4.3"
log = "0.4.22"
memmap2 = "0.9.4"
reqwest = { version = "0.12.28", default-features = false, features = ["http2", "charset", "blocking", "gzip", "brotli", "deflate", "rustls-tls-native-roots", "json"] }
rpassword = "7.3.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
thiserror = "1.0.63"

[profile.release]
codegen-units = 1
lto = true
